--- a/public/css/style.css
+++ b/public/css/style.css
@@ -220,12 +220,12 @@ a:focus,
 }
 .intro h1 {
   font-family: "Raleway", sans-serif;
-  color: #fff;
+  color: #E6E6E6;
   font-size: 82px;
   font-weight: 700;
   text-transform: uppercase;
   margin-top: 0;
-  margin-bottom: 10px;
+  margin-bottom: 110px;
 }
 .intro h1 span {
   font-weight: 800;
@@ -260,6 +260,19 @@ header .intro-text {
   background: linear-gradient(to right, #6372ff 0%, #5ca9fb 100%);
   box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.05);
 }
+#features .FontA {
+  font-size: 68px;
+  margin-bottom: 10px;
+  transition: all 0.5s;
+  color: #fff;
+  width: 100px;
+  height: 50px;
+  padding: 30px 0;
+  border-radius: 50%;
+  background: linear-gradient(to right, #6372ff 0%, #5ca9fb 100%);
+  box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.05);
+}
+
 /* About Section */
 #about {
   padding: 100px 0;
