--- a/public/css/style.css
+++ b/public/css/style.css
@@ -311,14 +311,15 @@ header .intro-text {
 /* Services Section */
 #services {
   padding: 100px 0;
-  background: linear-gradient(to right, #6372ff 0%, #5ca9fb 100%);
+  /* background: linear-gradient(to right, #6372ff 0%, #5ca9fb 100%); */
   color: #fff;
 }
 #services .service-desc {
   margin: 10px 10px 20px;
 }
 #services h2 {
-  color: #fff;
+  color: #333;
+  /* color: #fff; */
 }
 #services .section-title h2::after {
   position: absolute;
@@ -346,7 +347,8 @@ header .intro-text {
   color: #fff;
 }
 #services p {
-  color: rgba(255, 255, 255, 0.75);
+  color: #333;
+  /* color: rgba(255, 255, 255, 0.75); */
 }
 #services .service-desc {
   margin-bottom: 40px;
